--- a/src/MicroRabbit.Banking.Api/appsettings.json
+++ b/src/MicroRabbit.Banking.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PC-MSI-B550;Database=BankingDB;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  }
 }
