--- a/src/MicroRabbit.Banking.Application/MicroRabbit.Banking.Application.csproj
+++ b/src/MicroRabbit.Banking.Application/MicroRabbit.Banking.Application.csproj
@@ -2,9 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <LangVersion>13</LangVersion>
+        <LangVersion>12</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MicroRabbit.Banking.Domain\MicroRabbit.Banking.Domain.csproj"/>
+    </ItemGroup>
 
 </Project>
