--- a/src/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
+++ b/src/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
@@ -2,9 +2,16 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <LangVersion>13</LangVersion>
+        <LangVersion>12</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+        <Folder Include="CommandHandlers\"/>
+        <Folder Include="Commands\"/>
+        <Folder Include="EventHandlers\"/>
+        <Folder Include="Events\"/>
+    </ItemGroup>
 
 </Project>
