--- a/src/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
+++ b/src/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
@@ -8,10 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="CommandHandlers\"/>
-        <Folder Include="Commands\"/>
         <Folder Include="EventHandlers\"/>
-        <Folder Include="Events\"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj"/>
     </ItemGroup>
 
 </Project>
