refactor RabbitMQ Bus for Dependency injection for parameterless constructor in our event handlers

--- a/src/MicroRabbit.Transfer.Api/MicroRabbit.Transfer.Api.csproj
+++ b/src/MicroRabbit.Transfer.Api/MicroRabbit.Transfer.Api.csproj
@@ -7,7 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.4.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.7.24405.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MicroRabbit.Infra.IoC\MicroRabbit.Infra.IoC.csproj"/>
+        <ProjectReference Include="..\Microrabbit.Transfer.Data\Microrabbit.Transfer.Data.csproj"/>
     </ItemGroup>
 
 </Project>
