--- a/src/Microrabbit.Transfer.Data/Microrabbit.Transfer.Data.csproj
+++ b/src/Microrabbit.Transfer.Data/Microrabbit.Transfer.Data.csproj
@@ -8,8 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Context\" />
-      <Folder Include="Repository\" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.7.24405.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.7.24405.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.7.24405.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0-preview.7.24405.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Microrabbit.Transfer.Domain\Microrabbit.Transfer.Domain.csproj"/>
     </ItemGroup>
 
 </Project>
