--- a/src/MicroRabbit.Infra.Bus/MicroRabbit.Infra.Bus.csproj
+++ b/src/MicroRabbit.Infra.Bus/MicroRabbit.Infra.Bus.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="MediatR" Version="12.4.0"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.7.24405.7"/>
         <PackageReference Include="RabbitMQ.Client" Version="6.8.1"/>
     </ItemGroup>
 
