--- a/src/MicroRabbit.Transfer.Api/appsettings.Development.json
+++ b/src/MicroRabbit.Transfer.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PC-MSI-B550;Database=TransferDB;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
   }
 }
