--- a/src/Microrabbit.Transfer.Domain/Microrabbit.Transfer.Domain.csproj
+++ b/src/Microrabbit.Transfer.Domain/Microrabbit.Transfer.Domain.csproj
@@ -8,11 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="CommandHandler\" />
-      <Folder Include="Commands\" />
-      <Folder Include="EventHandler\" />
-      <Folder Include="Events\" />
-      <Folder Include="Models\" />
+        <Folder Include="CommandHandler\"/>
+        <Folder Include="Commands\"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj"/>
     </ItemGroup>
 
 </Project>
